<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="false"
        android:layout_margin="5dp"
        android:layout_centerVertical="true">

        <TableLayout
            android:id="@+id/tablePlatezei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/rectangle">

                <TextView
                    android:text="@string/year"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/background_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" />

                <TextView
                    android:text="@string/ostalos_viplatit"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/background_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:minLines="2"
                    android:background="@drawable/rectangle"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" />

                <TextView
                    android:text="@string/osn_dolg"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/background_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:minLines="2"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" />

                <TextView
                    android:text="@string/procent"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@android:color/background_dark"
                    android:minLines="2"
                    android:background="@drawable/rectangle"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" />

                <TextView
                    android:text="@string/platez_v_mes"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@android:color/background_dark"
                    android:minLines="2"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" />

            </TableRow>
        </TableLayout>

    </ScrollView>

</RelativeLayout>