<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ru.ageev_victor.calculator_ipoteka.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="Стоимость квартиры:"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/textView10"
            android:textSize="14sp"
            android:gravity="left|center_vertical|center_horizontal" />

        <EditText
            android:id="@+id/editText_stoimostKv"
            android:ems="10"
            android:inputType="number"
            android:layout_height="50dp"
            android:hint="3500000"
            android:layout_width="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/extView_srokKredita"
            android:layout_width="wrap_content"
            android:text="@string/srok"
            android:textSize="14sp"
            android:layout_height="50dp"
            android:gravity="left|center_vertical|center_horizontal" />

        <EditText
            android:id="@+id/editText_srokKredita"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="25"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/extView_pervonachVznos"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/perv_vznos"
            android:textSize="14sp"
            android:gravity="left|center_vertical|center_horizontal" />

        <EditText
            android:id="@+id/editText_pervonachVznos"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="850000"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/extView_procentStavka"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/stavka"
            android:textSize="14sp"
            android:gravity="left|center_vertical|center_horizontal" />

        <EditText
            android:id="@+id/editText_procentStavka"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:hint="10.9"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1" />
    </TableRow>
    <Button
        android:id="@+id/button_rasschitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raschitat"
        android:onClick="calculate"
        style="@android:style/Widget.Button" />
    <TableRow>
        <TextView
            android:text="Месячный платеж:"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/textView"
            android:textSize="14sp"
            android:gravity="left|center_vertical|center_horizontal" />
        <TextView
            android:text="0 руб"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/mesPlatezTextView"
            android:textSize="16sp"
            android:textColor="@color/colorGreen"
            android:gravity="left|center_vertical|center_horizontal"
            android:layout_weight="1"
            android:paddingLeft="20dp" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="Общая переплата по %:"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/textView8"
            android:textSize="14sp"
            android:gravity="left|center_vertical|center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/pereplataChisloTextView"
            android:text="0 руб"
            android:textSize="16sp"
            android:gravity="left|center_vertical|center_horizontal"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>
    <Button
        android:text="Посмотреть таблицу платежей по годам"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showTablBtn"
        android:onClick="showTablPlatezei"
        style="@android:style/Widget.Button" />

</TableLayout>
